# smeeg

./: .gitignore  Cargo.toml  Makefile  Modelfile  README.md
data/: .gitgnore  server.db
migrations/: 20240323205627_init.sql
src/: bot.rs  config.rs  lib.rs  main.rs  state.rs
src/agent/: agent.rs  main.rs
src/app/: config.rs  mod.rs  state.rs  version.rs
src/database/: mod.rs
