[package]
name = "smeeg"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "smeeg"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chromadb = "0.4.4"
dotenvy = "0.15.7"
object_store = "0.9.1"
ollama-rs = { version = "0.1.7", features = ["stream"] }
serde = "1.0.197"
sqlx = { version = "0.7.4", features = ["sqlite"] }
teloxide = { version = "0.12.2", features = ["ctrlc_handler"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = [
  "std-future",
] }
tracing-subscriber = { version = "^0.3", default-features = false, features = [
  "env-filter",
  "fmt",
  "local-time",
  "time",
  "tracing",
] }

url = "2.5.0"
